# play_with_image_analysis

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  sample.py
src/: main.py
