[tool.poetry]
name = "play-with-image-analysis"
version = "0.1.0"
description = ""
authors = ["koba-masa <kobayashi_mshr@koba-masa.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.0"
imagehash = "^4.3.1"
opencv-python = "^4.8.0.76"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
